# documentation

./: .gitignore  MiMo-TTS-Guide.md  README.md  key.pem
Shared/: cyony-codex-kimi-guide.md  kimi-codex-guide.md
Tripp.Forge/: ARCHITECTURE.md  PHASE1_COMPLETE.md  PHASE1_TASK.md  RESEARCH_CODEX.md  RESEARCH_KIMI.md  REVIEW_CODEX.md  REVIEW_KIMI.md  SPEC.md
Tripp.Teacher/: COMPLETION-PLAN.md  README.md
audit-orchestrator/: AUDIT_HANDOFF.md  CODEX_PROJECT_BRIEF.md
docs/: QUICK_REFERENCE.md  STATUS.md
inbox/: README.md
knowledge-base/: README.md  index.md  log.md  start-librarian.sh
memory/: README.md  cyony.md  tripp.md
plans/: 2026-07-17-pixovid-personal.md
queues/: README.md
skills/: README.md
skills/tripp-mail/: DOCTRINE.md  ENVIRONMENT_BRIEF.md  README.md  REDESIGN_PLAN.md  audit_broadcast.py  pyproject.toml  test_doctrine.py  test_round20_production.py  test_round21_identity.py
skills/tripp-mail/scripts/: init_db.py
skills/tripp-mail/tests/: test_round19_adversarial.py  test_round20_production.py  test_round21_identity.py
skills/tripp-mail/tripp_system/: __init__.py  audit.py  audit_service.py  cli.py  config.py  credential_service.py  database.py  delivery.py  errors.py  id_generator.py  models.py  reaper.py  schema.sql  worker.py
skills/tripp-mail/workers/: reply_worker.py  update_worker.py
sqhq-local-ai/: AGENT-MANAGEMENT-SPEC.md  CHATTERBOX_EMOTION_AUDIT.md  CHATTERBOX_GUIDE.md  CLONE_EMOTION_FIX.md  CYONY_REVIEW_PROMPT.md  CYONY_VOICE_GUIDE.md  DESIGN_SPEC.md  EMOTION_TAG_GUIDE.md  IMPLEMENTATION_PLAN.md  OPENCLAW_COMMON_PROBLEMS.md  (+17 more)
(+132 files in other folders)
